Bug 1182460 - allow exporting all addressbooks. r=mkmelin, r=Ratty